overflow fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,7 +1,7 @@
 .menu {
   background-color: $menu-background;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: auto;
 
   &__top-items {
     grid-template-columns: 1fr $icon-size;
